# Machine-Learning-Projects

./: README.md
CostOfLivingML/: Living_cost_ML.cpp
CostOfLivingML/data/: dataset.csv
DigitalSignML/: Digital_sign_ML.cpp
DigitalSignML/data/: dataset.csv
FinancePredictML/: Finance_predict_ML.py
FinancialAssetDL/: Financial_asset_DL.py
NewsClassifierML/: News_classifier_ML.py
RedditSearcherML/: Reddit_searcher_ML.py
XGBBoostModel/: XGB_Boost_Model.py
XGBBoostModel/src_cpp/: CMakeLists.txt  XGB_Boost_Model.cpp
XGBBoostModel/src_cpp/comp/: CMakeLists.txt
